k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextemplate
spec:
  type: ClusterIP
  selector:
    app: nextemplate
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
